--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@
 cmake_minimum_required(VERSION 4.0.0 FATAL_ERROR)
 
 set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "a9e1cf81-9932-4810-974b-6eccaf14e457")
-set(CMAKE_CXX_FLAGS "-stdlib=libc++")
 
 project(uzleo.json
   VERSION 0.1.0
@@ -13,7 +12,7 @@ project(uzleo.json
 set(CMAKE_CXX_MODULE_STD ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-find_package(fmt REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 set_target_properties(fmt::fmt
   PROPERTIES
     CXX_STANDARD 26
