--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -15,6 +15,10 @@ target_link_libraries(example
     json
     fmt::fmt
 )
+target_compile_features(example
+  PRIVATE
+    cxx_std_26
+)
 
 add_executable(wsc)
 target_sources(wsc
@@ -25,4 +29,8 @@ target_link_libraries(wsc
   PRIVATE
     json
     fmt::fmt
+)
+target_compile_features(wsc
+  PRIVATE
+    cxx_std_26
 )
